--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "file-system": "^2.2.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "ngx-mat-select-search": "^7.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
