--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-system": "^2.2.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "ngx-autosize": "^2.0.4",
     "ngx-mat-select-search": "^7.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
